- enter in polygon name now updates polygon name

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1236,7 +1236,7 @@ IDD_PICCOMMANDS_VGA DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Delete",ID_EDIT_DELETE,76,42,34,14
+    PUSHBUTTON      "Delete",ID_EDIT_DELETE,76,42,34,14
     PUSHBUTTON      "Crop",ID_CROPCOMMANDS,44,42,30,14
     LISTBOX         IDC_LISTCOMMANDS,7,60,103,99,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,178,103,87
@@ -1644,7 +1644,7 @@ IDD_PICCOMMANDS_VGA1 DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Delete",ID_EDIT_DELETE,76,56,34,14
+    PUSHBUTTON      "Delete",ID_EDIT_DELETE,76,56,34,14
     PUSHBUTTON      "Crop",ID_CROPCOMMANDS,44,56,30,14
     LISTBOX         IDC_LISTCOMMANDS,7,74,103,85,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,183,103,87
