- make "used color" dot more clear - avoid case where arrow keys don't shift colors in shift color dialog.

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1744,7 +1744,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Ok",IDOK,226,199,60,14
     PUSHBUTTON      "Cancel",IDCANCEL,226,216,60,14
-    CONTROL         "",IDC_STATIC1,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,212,190
+    CONTROL         "",IDC_STATIC1,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_TABSTOP,7,7,212,190
     EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
     CONTROL         "Cel only",IDC_RADIOCEL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,233,17,44,10
     CONTROL         "Enire loop",IDC_RADIOLOOP,"Button",BS_AUTORADIOBUTTON,233,31,44,10
