- support for dithering pic backgrounds when matching to existing palette.

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1462,13 +1462,14 @@ BEGIN
     CONTROL         "Exclude from palette",IDC_CHECKDONTUSEINPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,261,182,72,21
     CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,261,207,71,10
     GROUPBOX        "Transparency",IDC_STATICGROUP3,243,158,96,65
-    CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,225,145,10
-    CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,239,144,10
+    CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,224,145,10
+    CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,235,144,10
     CONTROL         "Insert at current position",IDC_CHECKINSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,247,261,95,10
     CONTROL         "",IDC_STATICPALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,347,158,109,89
     PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,7,258,50,14
     PUSHBUTTON      "From Clipboard",IDC_BUTTONCLIPBOARD,68,258,66,14
     PUSHBUTTON      "Refresh",IDC_BUTTONREFRESH,321,235,21,14,BS_ICON
+    CONTROL         "Dither",IDC_CHECKDITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,246,144,10
 END
 
 IDD_PICHELPER DIALOGEX 0, 0, 130, 285
