- support dithering for importing image sequences

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -459,6 +459,7 @@
     <ClCompile Include="Src\Util\Stream.cpp" />
     <ClCompile Include="Src\Util\util.cpp" />
     <ClCompile Include="Src\Util\Version.cpp" />
+    <ClCompile Include="Src\Util\VGADither.cpp" />
     <ClCompile Include="Src\Util\WordEnumString.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -659,6 +660,7 @@
     <ClInclude Include="Src\Util\Stream.h" />
     <ClInclude Include="Src\Util\ToolTipResult.h" />
     <ClInclude Include="Src\Util\Version.h" />
+    <ClInclude Include="Src\Util\VGADither.h" />
     <ClInclude Include="Src\Util\WindowsUtil.h" />
     <ClInclude Include="Src\Util\WordEnumString.h" />
     <ClInclude Include="stdafx.h" />
