--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -499,6 +499,7 @@ BEGIN
         MENUITEM "&Remove embedded palette",    ID_VIEW_REMOVEEMBEDDEDPALETTE
         MENUITEM "Re&map palette",              ID_VIEW_REMAPPALETTE
         MENUITEM "&Shift colors",               ID_VIEW_SHIFTCOLORS
+        MENUITEM "&Export current loop as gif", ID_VIEW_EXPORTASGIF
     END
     POPUP "Voca&b"
     BEGIN
