- redo the insert object dialog so it supports SCI1.1 and is extensible

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -398,7 +398,7 @@ BEGIN
         BEGIN
             MENUITEM "&View",                       ID_FILE_NEWVIEW
             MENUITEM "&Pic",                        ID_FILE_NEWPIC
-            MENUITEM "&Room",                       ID_NEWROOM
+            MENUITEM "&New room",                   ID_NEWROOM
             MENUITEM "&Font",                       ID_FILE_NEWFONT
             MENUITEM "&Cursor",                     ID_FILE_NEWCURSOR
             MENUITEM "&Text",                       ID_FILE_NEWTEXT
@@ -921,18 +921,21 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,97,76,85,19
 END
 
-IDD_INSERTSCIOBJECT DIALOGEX 0, 0, 128, 165
+IDD_INSERTSCIOBJECT DIALOGEX 0, 0, 235, 165
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Insert object"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     RTEXT           "&Name:",IDC_STATIC1,7,6,29,13,SS_CENTERIMAGE
-    EDITTEXT        IDC_EDITNAME,41,6,80,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDITNAME,41,6,78,14,ES_AUTOHSCROLL
     RTEXT           "&Type:",IDC_STATIC2,7,31,29,8,SS_CENTERIMAGE
-    COMBOBOX        IDC_OBJECTTYPE,41,28,79,88,CBS_SIMPLE | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Add &Script class",IDC_CHECKSCRIPT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,43,126,78,10
-    DEFPUSHBUTTON   "OK",IDOK,7,144,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,71,144,50,14
+    COMBOBOX        IDC_OBJECTTYPE,41,28,78,130,CBS_SIMPLE | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,119,144,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,178,144,50,14
+    RTEXT           "&Properties:",IDC_STATIC3,128,31,36,8,SS_CENTERIMAGE
+    RTEXT           "&Methods:",IDC_STATIC4,128,104,36,12,SS_CENTERIMAGE
+    LISTBOX         IDC_LISTPROPS,164,27,64,74,LBS_MULTIPLESEL | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_LISTMETHODS,164,105,64,34,LBS_MULTIPLESEL | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_VOCABAUTOCOMPLETE DIALOGEX 0, 0, 164, 66
@@ -1245,7 +1248,7 @@ BEGIN
     PUSHBUTTON      "Copy",ID_EDIT_COPY,7,42,32,14
     PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
     PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,14,BS_ICON | BS_FLAT
-    PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND, 44, 25, 66, 14
+    PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND,44,25,66,14
 END
 
 IDD_DIALOGEMPTY DIALOGEX 0, 0, 129, 221
@@ -1654,7 +1657,7 @@ BEGIN
     PUSHBUTTON      "Copy",ID_EDIT_COPY,7,56,32,14
     PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
     PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,14,BS_ICON | BS_FLAT
-    PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND, 44, 25, 66, 14
+    PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND,44,25,66,14
     LISTBOX         IDC_LISTPOLYGONS,7,105,103,31,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOPOLYTYPE,44,90,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Type:",IDC_STATICPOLYTYPE,7,92,30,8
@@ -1911,8 +1914,10 @@ BEGIN
     IDD_INSERTSCIOBJECT, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 121
+        RIGHTMARGIN, 228
         VERTGUIDE, 41
+        VERTGUIDE, 119
+        VERTGUIDE, 164
         TOPMARGIN, 6
         BOTTOMMARGIN, 158
     END
