--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -98,6 +98,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Help" "$(OutDir)Help"
 
 xcopy /S /Y /I /D "$(ProjectDir)Files\Samples" "$(OutDir)Samples"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
+xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -134,6 +135,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Help" "$(OutDir)Help"
 
 xcopy /S /Y /I /D "$(ProjectDir)Files\Samples" "$(OutDir)Samples"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
+xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -174,6 +176,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Help" "$(OutDir)Help"
 
 xcopy /S /Y /I /D "$(ProjectDir)Files\Samples" "$(OutDir)Samples"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
+xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -216,6 +219,8 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
     <None Include="Files\Decompiler\Decompiler.ini" />
     <None Include="Files\Decompiler\game.sh" />
     <None Include="Files\Licenses\cppformat_README.rst" />
+    <None Include="Files\Objects\SCI0\Objects.sc" />
+    <None Include="Files\Objects\SCI1.1\Objects.sc" />
     <None Include="Files\Samples\SCI0\cursors\Arrow 1.bin" />
     <None Include="Files\Samples\SCI0\cursors\Arrow Small.bin" />
     <None Include="Files\Samples\SCI0\cursors\Arrow Up.bin" />
