--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -612,6 +612,8 @@
     <None Include="Files\Samples\SCI1.1\fonts\Sierra Debug.bin">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="Files\Objects\SCI1.1\Objects.sc" />
+    <None Include="Files\Objects\SCI0\Objects.sc" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
