--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -259,10 +259,12 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\Samples\SCI0\views\Key.bin" />
     <None Include="Files\Samples\SCI0\views\Ranger.bin" />
     <None Include="Files\Samples\SCI1.1\fonts\Sierra Debug.bin" />
+    <None Include="Files\Samples\SCI1.1\fonts\Sierra Large.bin" />
     <None Include="Files\Samples\SCI1.1\fonts\Sierra Sans.bin" />
     <None Include="Files\Samples\SCI1.1\fonts\Sierra Serif.bin" />
     <None Include="Files\Samples\SCI1.1\fonts\Sierra Small A.bin" />
     <None Include="Files\Samples\SCI1.1\fonts\Sierra Small B.bin" />
+    <None Include="Files\Samples\SCI1.1\fonts\Wilco Small Caps.bin" />
     <None Include="Files\Samples\SCI1.1\palettes\Default.bin" />
     <None Include="Files\Samples\SCI1.1\palettes\King 6.bin" />
     <None Include="Files\Samples\SCI1.1\palettes\Quest.bin" />
