-simplify template game

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -15,7 +15,7 @@ n025=VelocityMover
 n026=ScrollableInventory
 n027=ScrollInsetWindow
 n030=AnimDialog
-n100=rm100
+n100=TitleScreen
 n956=ForwardCounter
 n110=rm110
 n990=SRDialog
@@ -87,7 +87,6 @@ n982=Helpers
 n958=DisposeLoad
 n926=Flip
 n101=rm101
-n105=rm105
 n014=DebugOut
 n010=debughandler
 n016=debugroominit
@@ -104,6 +103,7 @@ n997=SelectorTable
 n996=ClassTable
 [Pic]
 n200=DeathRoom
+n100=TitleScreen
 [View]
 n991=InventoryActions
 n990=Actions
@@ -126,3 +126,7 @@ n008=ED-22-16
 n3002=SierraSans4
 n999=Debug
 n004=Small
+[Message]
+n020=DeathRoom
+n015=Inventory
+n013=Credits
