- descriptive text in some previewers

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1315,7 +1315,8 @@ IDD_PREVIEWTEXT DIALOGEX 0, 0, 153, 230
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDITSCRIPT,7,7,139,216,ES_MULTILINE | ES_OEMCONVERT | ES_READONLY | WS_VSCROLL | WS_HSCROLL
+    EDITTEXT        IDC_EDITSCRIPT,7,51,139,172,ES_MULTILINE | ES_OEMCONVERT | ES_READONLY | WS_VSCROLL | WS_HSCROLL
+    LTEXT           "",IDC_STATICTITLE,7,7,139,37
 END
 
 IDD_PREVIEWFONT DIALOGEX 0, 0, 153, 230
@@ -1341,14 +1342,15 @@ IDD_PREVIEWSOUND DIALOGEX 0, 0, 153, 230
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    COMBOBOX        IDC_COMBO_DEVICE,57,23,89,100,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "SCI Synth:",IDC_STATIC_SYNTH,7,25,46,10,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDIT_CHANNELS,7,89,139,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY,7,41,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,27,41,19,14
-    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,52,41,94,15
-    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,60,131,10
-    LTEXT           "Duration:",IDC_STATIC_DURATION,7,77,72,8
+    COMBOBOX        IDC_COMBO_DEVICE,57,31,89,100,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "SCI Synth:",IDC_STATIC_SYNTH,7,33,46,10,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDIT_CHANNELS,7,97,139,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY,7,49,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,27,49,19,14
+    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,52,49,94,15
+    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,68,131,10
+    LTEXT           "Duration:",IDC_STATIC_DURATION,7,85,72,8
+    LTEXT           "Sound resources are midi-based resources used for music and sound effects.",IDC_STATICTITLE,7,7,139,20
 END
 
 IDD_SOUNDTOOLBOX DIALOGEX 0, 0, 117, 277
@@ -1687,14 +1689,15 @@ IDD_PREVIEWAUDIO DIALOGEX 0, 0, 153, 230
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDIT_SAMPLEBIT,7,54,139,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY,7,6,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,27,6,19,14
-    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,52,6,94,15
-    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,25,131,10
-    LTEXT           "Duration:",IDC_STATIC_DURATION,7,42,72,8
-    EDITTEXT        IDC_EDIT_DESCRIPTION,7,71,139,56,ES_MULTILINE | ES_READONLY
-    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,7,134,69,14
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,7,82,139,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY,7,34,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,27,34,19,14
+    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,52,34,94,15
+    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,53,131,10
+    LTEXT           "Duration:",IDC_STATIC_DURATION,7,70,72,8
+    EDITTEXT        IDC_EDIT_DESCRIPTION,7,99,139,56,ES_MULTILINE | ES_READONLY
+    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,7,162,69,14
+    LTEXT           "Audio resources are short wav-based resources used for sound effects.",IDC_STATICTITLE,7,7,139,22
 END
 
 IDD_CONVERTTOPALETTE DIALOGEX 0, 0, 151, 69
