- fix issue with -ve line coordinates (switch drawing to signed integers) - fix pic fill issues

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1542,6 +1542,7 @@ BEGIN
     CONTROL         "->",IDC_BUTTONCYCLERIGHT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,88,230,20,16
     PUSHBUTTON      "&Adjust",IDC_BUTTONADJUSTMENTS,226,70,60,14
     PUSHBUTTON      "Add as &resource",IDC_BUTTON_SAVEPALETTE,226,200,60,14
+    CONTROL         "",IDC_SLIDERCYCLESPEED,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,8,230,48,15
 END
 
 IDD_PALETTE_EDITOR_EMBEDDED DIALOGEX 0, 0, 293, 236
