- updates to template game (re-naming)

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -4,13 +4,13 @@ n032=DColorButton
 n984=RegionPath
 n011=disposeCode
 n013=aboutCode
-n015=Sq5InvItem
+n015=InvItem
 n017=Smopper
 n018=SQEgo
 n020=deathRoom
 n021=FlickerCycler
 n022=PriorityTalker
-n024=SQ5ControlItem
+n024=ControlItem
 n025=VelocityMover
 n026=ScrollableInventory
 n027=ScrollInsetWindow
