- support pattern pens in raster resources

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1161,10 +1161,9 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_STATIC_CHOSENCOLORS,"Static",SS_OWNERDRAW | WS_GROUP,15,7,24,19
     CONTROL         "",IDC_STATIC_PALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,49,7,36,16
-    LTEXT           "Pen width:",IDC_STATIC1,3,29,36,10
-    COMBOBOX        IDC_COMBO_PENWIDTH,3,39,33,200,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "ï",IDC_BUTTONLEFT,50,40,15,11
-    PUSHBUTTON      "ð",IDC_BUTTONRIGHT,65,40,15,11
+    LTEXT           "Pen style:",IDC_STATIC1,34,33,33,10
+    PUSHBUTTON      "ï",IDC_BUTTONLEFT,33,44,15,11
+    PUSHBUTTON      "ð",IDC_BUTTONRIGHT,48,44,15,11
     LTEXT           "Size:",IDC_STATIC2,13,68,23,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_EDIT_CELWIDTH,37,65,21,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "x",IDC_STATIC5,59,72,8,8,0,WS_EX_RIGHT
@@ -1178,21 +1177,22 @@ BEGIN
     PUSHBUTTON      "Use Windows font",ID_MAKEFONT,3,198,96,14
     EDITTEXT        IDC_EDITNUMCHARS,65,106,29,14,ES_AUTOHSCROLL | ES_NUMBER
     RTEXT           "Char count:",IDC_STATIC8,18,108,39,8
+    CONTROL         "Pen",IDC_BUTTONPENSTYLE,"Button",BS_OWNERDRAW | BS_BITMAP | WS_TABSTOP,71,27,23,19
 END
 
-IDD_DIALOGCELCURSOR2 DIALOGEX 0, 0, 102, 124
+IDD_DIALOGCELCURSOR2 DIALOGEX 0, 0, 102, 150
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_STATIC_CHOSENCOLORS,"Static",SS_OWNERDRAW | WS_GROUP,15,7,24,19
     CONTROL         "",IDC_STATIC_PALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,49,7,40,31
-    LTEXT           "Pen width:",IDC_STATIC1,3,29,36,10
-    COMBOBOX        IDC_COMBO_PENWIDTH,3,39,33,200,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Hot spot:",IDC_STATIC2,3,58,36,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDIT_CELX,44,54,21,14,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           ",",IDC_STATIC5,65,57,8,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDIT_CELY,78,54,21,14,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Use origin tool to set hot spot. (0, 0) and (8, 8) are the two values allowed, although SCI0 games only use (0,0).",IDC_STATIC3,3,74,96,43
+    LTEXT           "Pen style:",IDC_STATIC1,37,55,36,10
+    LTEXT           "Hot spot:",IDC_STATIC2,3,85,36,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDIT_CELX,44,81,21,14,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           ",",IDC_STATIC5,65,84,8,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDIT_CELY,78,81,21,14,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Use origin tool to set hot spot. (0, 0) and (8, 8) are the two values allowed, although SCI0 games only use (0,0).",IDC_STATIC3,3,100,96,43
+    CONTROL         "Pen",IDC_BUTTONPENSTYLE,"Button",BS_OWNERDRAW | BS_BITMAP | WS_TABSTOP,76,49,23,19
 END
 
 IDD_DIALOGCELVIEW2 DIALOGEX 0, 0, 102, 333
@@ -1201,8 +1201,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_STATIC_CHOSENCOLORS,"Static",SS_OWNERDRAW | WS_GROUP,3,104,24,19
     CONTROL         "",IDC_STATIC_PALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,3,7,96,94
-    LTEXT           "Pen:",IDC_STATIC1,31,108,18,10
-    COMBOBOX        IDC_COMBO_PENWIDTH,49,106,27,200,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Pen style:",IDC_STATIC1,40,107,34,10
     PUSHBUTTON      "ñ",IDC_BUTTONUP,68,139,15,12
     PUSHBUTTON      "ï",IDC_BUTTONLEFT,52,145,15,11
     PUSHBUTTON      "ð",IDC_BUTTONRIGHT,84,145,15,11
@@ -1232,7 +1231,7 @@ BEGIN
     COMBOBOX        IDC_COMBO_PALETTE,39,123,37,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Is scalable",IDC_CHECKISSCALABLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,145,45,11
     PUSHBUTTON      "Edit",ID_VIEW_EDITPALETTE,80,122,19,14,BS_ICON | BS_FLAT
-    PUSHBUTTON      "Button5",IDC_BUTTONPENSTYLE,83,105,16,14
+    CONTROL         "Pen",IDC_BUTTONPENSTYLE,"Button",BS_OWNERDRAW | BS_BITMAP | WS_TABSTOP,76,102,23,19
 END
 
 IDD_PICCOMMANDS DIALOGEX 0, 0, 117, 277
@@ -2085,7 +2084,7 @@ BEGIN
         VERTGUIDE, 39
         VERTGUIDE, 65
         TOPMARGIN, 7
-        BOTTOMMARGIN, 117
+        BOTTOMMARGIN, 143
     END
 
     IDD_DIALOGCELVIEW2, DIALOG
