- support for alpha dithering for pic backgrounds - fix bug where overlaid image would cause resize - re-organize import pic background dialog

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1449,21 +1449,21 @@ BEGIN
     LTEXT           "Choose a color:",IDC_DIALOGDESCRIPTION,7,7,115,11
 END
 
-IDD_BITMAPTOVGA DIALOGEX 0, 0, 463, 279
+IDD_BITMAPTOVGA DIALOGEX 0, 0, 463, 297
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Import background"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "&Accept",IDOK,347,258,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,406,258,50,14
+    DEFPUSHBUTTON   "&Accept",IDOK,347,276,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,406,276,50,14
     CONTROL         "",IDC_STATICORIG,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,7,209,125
-    ICON            IDI_ICONCONVERT,IDC_STATIC,222,60,20,20
+    ICON            IDI_ICONCONVERT,IDC_STATIC,222,60,21,20
     CONTROL         "",IDC_STATICPIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,243,10,213,117
     EDITTEXT        IDC_EDITSTATUS,7,139,449,14,ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "Generate best palette",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,133,172,87,10
-    CONTROL         "Map to current pic palette",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,133,188,99,10
-    CONTROL         "Use imported image palette",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,133,204,99,10
-    GROUPBOX        "Palette",IDC_STATICGROUP2,126,158,110,65
+    CONTROL         "Generate best palette",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,239,168,87,10
+    CONTROL         "Map to current pic palette",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,239,184,99,10
+    CONTROL         "Use imported image palette",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,239,200,99,10
+    GROUPBOX        "Palette generation",IDC_STATICGROUP2,232,154,110,65
     LTEXT           "Brightness:",IDC_STATIC1,22,173,40,8
     CONTROL         "",IDC_SLIDERBRIGHTNESS,"msctls_trackbar32",0x0,22,182,87,12
     LTEXT           "Contrast:",IDC_STATIC2,22,198,40,8
@@ -1471,19 +1471,22 @@ BEGIN
     LTEXT           "Saturation:",IDC_STATIC3,22,222,40,8
     CONTROL         "",IDC_SLIDERSATURATION,"msctls_trackbar32",WS_TABSTOP,22,232,87,12
     GROUPBOX        "Original",IDC_STATICGROUP1,7,158,113,94
-    RTEXT           "Color:",IDC_STATICTRANSLABEL,257,172,24,8
-    EDITTEXT        IDC_EDITTRANSPARENTCOLOR,290,170,44,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Exclude from palette",IDC_CHECKDONTUSEINPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,261,182,72,21
-    CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,261,207,71,10
-    GROUPBOX        "Transparency",IDC_STATICGROUP3,243,158,96,65
-    CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,224,145,10
-    CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,235,144,10
-    CONTROL         "Insert at current position",IDC_CHECKINSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,247,261,95,10
+    RTEXT           "Color:",IDC_STATICTRANSLABEL,132,168,24,8
+    EDITTEXT        IDC_EDITTRANSPARENTCOLOR,165,166,44,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Exclude from palette",IDC_CHECKDONTUSEINPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,136,179,72,21
+    CONTROL         "Overlay on current",IDC_CHECKOVERLAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,204,71,10
+    GROUPBOX        "Transparency",IDC_STATICGROUP3,124,154,96,65
+    CONTROL         "Honor global palette",IDC_CHECKGLOBALPALETTE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,241,235,89,30
+    GROUPBOX        "Palette usage",IDC_STATICGROUP4,232,226,107,47
+    CONTROL         "Scale image to fit",IDC_CHECKSCALE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,227,82,10
+    CONTROL         "Dither",IDC_CHECKDITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,241,82,10
+    CONTROL         "Dither alpha",IDC_CHECKDITHERALPHA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,255,77,10
+    CONTROL         "Insert at current position",IDC_CHECKINSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,241,278,95,10
     CONTROL         "",IDC_STATICPALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,347,158,109,89
-    PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,7,258,50,14
-    PUSHBUTTON      "From Clipboard",IDC_BUTTONCLIPBOARD,68,258,66,14
-    PUSHBUTTON      "Refresh",IDC_BUTTONREFRESH,321,235,21,14,BS_ICON
-    CONTROL         "Dither",IDC_CHECKDITHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,129,246,144,10
+    PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,7,276,50,14
+    PUSHBUTTON      "From Clipboard",IDC_BUTTONCLIPBOARD,68,276,66,14
+    PUSHBUTTON      "Refresh",IDC_BUTTONREFRESH,347,250,21,14,BS_ICON
+    EDITTEXT        IDC_EDITRANGES,373,250,83,22,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
 IDD_PICHELPER DIALOGEX 0, 0, 130, 285
@@ -2256,7 +2259,7 @@ BEGIN
         VERTGUIDE, 243
         VERTGUIDE, 342
         TOPMARGIN, 7
-        BOTTOMMARGIN, 272
+        BOTTOMMARGIN, 290
         HORZGUIDE, 132
         HORZGUIDE, 139
         HORZGUIDE, 158
